[package]
name = "spotr-mount-sensor"
version = "0.1.0"
authors = ["dbregeon <denis.bregeon@digitalbrikes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib"]

[dependencies]
nix = { version = "0.30.1", features = ["fs"] }
toml = "0.9.8"
serde = "1.0.228"
serde_derive = "1.0.228"
coz = "0.1"
spotr-sensing = { path = "../spotr-sensing", version = "0.1.0" }

[profile.release]
debug = 1
